# CHARON-Client

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  Jenkinsfile  README.md  Test_Charon_Dll.sln  codeanalysis.bat  documentation.bat  project.yml  test_SessionAndTransportManager.exe.stackdump
DotNetImport/: Program.cs
Ports/: CMakeLists.txt
Ports/Windows/: CMakeLists.txt  project.yml
Ports/Windows/src/: config.h  main.c  timer.c  wincom.c
Templates/: Template.c  Template.h  TestTemplate.c
Test_Charon_Dll/: Test_Charon_Dll.vcxproj  Test_Charon_Dll.vcxproj.filters
cmake/: mingwGCC.cmake
design/: UDSClient.eapx
documentation/: Doxyfile  group_definitions.c
documentation_src/: group_definitions.c
include/: UDSClientLib.h  compiler.h  config.h
include/BusinessLogic/DCM/: DiagnosticCommunicationManager.h
include/BusinessLogic/DTC/: StoredDataTransmitter.h
include/BusinessLogic/DataTransmitter/: DataTransmitter.h
include/BusinessLogic/IOControl/: InputOutputController.h
include/BusinessLogic/Routine/: Routine.h
include/BusinessLogic/UploadDownload/: UploadDownload.h
include/ComLogic/: SessionAndTransportManager.h
include/ComLogic/SessionAndTransportManager/: SessionAndTransportManager.h
include/Common/: UDSClientLib.h  compiler.h  config.h
include/Common/compiler/: compiler.h
include/DataModels/: BaudRates.h  CommunicationControl.h  ComparisonLogic.h  DataDefinition.h  DataIdentifier.h  ErrorCode.h  MemoryDefinition.h  ResetTypes.h  ResponseCode.h  SID.h  Session.h  TimerRates.h
include/Interfaces/: CallbackInterface.h  ComInterface.h  SecurityInterface.h  TimerInterface.h
include/UDSClientLib/: UDSClientLib.h
include/config/: config.h
port/: CMakeLists.txt
port/demo/: CMakeLists.txt  project.yml
port/demo/inc/demo_features/: demo.h
port/demo/src/: CMakeLists.txt
port/demo/src/config/: CMakeLists.txt
port/demo/src/demo_features/: CMakeLists.txt  demo.c
port/demo/src/main/: main.c
port/demo/src/timer/: CMakeLists.txt  timer.c
port/demo/src/wincom/: CMakeLists.txt  wincom.c
port/windows/: CMakeLists.txt  project.yml
port/windows/inc/communication_test/: communication_test.h
port/windows/inc/config/: config.h
port/windows/src/: CMakeLists.txt
port/windows/src/communication_test/: CMakeLists.txt  communication_test.c
port/windows/src/config/: CMakeLists.txt
port/windows/src/main/: main.c
port/windows/src/timer/: CMakeLists.txt  timer.c
port/windows/src/wincom/: CMakeLists.txt  wincom.c
src/: CMakeLists.txt  UDSClientLib.c  UDSClientLib.h
src/BusinessLogic/: CMakeLists.txt
src/BusinessLogic/DCM/: CMakeLists.txt  DiagnosticCommunicationManager.c  DiagnosticCommunicationManager.h
src/BusinessLogic/DTC/: CMakeLists.txt  StoredDataTransmitter.c  StoredDataTransmitter.h
src/BusinessLogic/DataTransmitter/: CMakeLists.txt  DataTransmitter.c  DataTransmitter.h
src/BusinessLogic/IOControl/: CMakeLists.txt  InputOutputController.c  InputOutputController.h
src/BusinessLogic/Routine/: CMakeLists.txt  Routine.c  Routine.h
src/BusinessLogic/UploadDownload/: CMakeLists.txt  UploadDownload.c  UploadDownload.h
src/ComLogic/: CMakeLists.txt  SessionAndTransportManager.c  SessionAndTransportManager.h
src/ComLogic/SessionAndTransportManager/: CMakeLists.txt  SessionAndTransportManager.c
src/Common/compiler/: CMakeLists.txt
src/DataModels/: CMakeLists.txt  DataDefinition.c  DataDefinition.h  ErrorCode.c  MemoryDefinition.c  MemoryDefinition.h  ResponseCode.h  Session.h
src/DataModels/ErrorCode/: CMakeLists.txt  ErrorCode.c
src/DataModels/MemoryDefinition/: CMakeLists.txt  MemoryDefinition.c
src/Interfaces/: CMakeLists.txt  ComInterface.h  SecurityInterface.h
src/Ports/Windows/: CMakeLists.txt  project.yml
src/Ports/Windows/src/: CMakeLists.txt  config.h  main.c  timer.c  wincom.c
src/UDSClientLib/: CMakeLists.txt  UDSClientLib.c
test/: test_UDSClientLib.c
test/BusinessLogic/: test_DataTransmitter.c  test_DiagnosticCommunicationManager.c  test_InputOutputController.c  test_Routine.c  test_StoredDataTransmitter.c  test_UploadDownload.c
test/ComLogic/: test_SessionAndTransportManager.c
test/support/: TestCallback.h  TestCom.h  TestSecurity.h  TestTime.h
toolchain/cmake/: GCC.cmake
toolchain/python/: buildRunner.py
